tests/idris2/operators/operators013/expected
1/1: Building Pos0 (Pos0.idr)
1/1: Building Pos1 (Pos1.idr)
1/1: Building Pos2 (Pos2.idr)
1/1: Building Neg (Neg.idr)
Error: '*&*&*&*&*&*&*&*&*' is not a regular infix operator

Neg:4:16--4:33
 1 | private prefix 0 *&*&*&*&*&*&*&*&*
 2 | 
 3 | badRegular : Nat
 4 | badRegular = 5 *&*&*&*&*&*&*&*&* 6
                    ^^^^^^^^^^^^^^^^^

Error: '*&*&*&*&*&*&*&*&*' is not a typebind infix operator

Neg:7:25--7:42
 3 | badRegular : Nat
 4 | badRegular = 5 *&*&*&*&*&*&*&*&* 6
 5 | 
 6 | badTypebind : Nat
 7 | badTypebind = (x : Nat) *&*&*&*&*&*&*&*&* 6
                             ^^^^^^^^^^^^^^^^^

Error: '*&*&*&*&*&*&*&*&*' is not a autobind infix operator

Neg:10:24--10:41
 06 | badTypebind : Nat
 07 | badTypebind = (x : Nat) *&*&*&*&*&*&*&*&* 6
 08 | 
 09 | badAutobind : Nat
 10 | badAutobind = (x <- 5) *&*&*&*&*&*&*&*&* 6
                             ^^^^^^^^^^^^^^^^^

